[ios] Update panel after history item deletion

BUG=681537

Review-Url: https://codereview.chromium.org/2680503004
Cr-Commit-Position: refs/heads/master@{#448532}

Former-commit-id: bf0aebdaabb28ca18c88568c7d92064d94a3046b